fix animation mobile

--- a/static/style/main.css
+++ b/static/style/main.css
@@ -59,13 +59,16 @@ div.gm4html5_login_header
   height: 100%;
 }
 
+
+.pointer {
+  cursor: pointer !important;
+}
 .panel-wrap {
   position: relative;
   width: 100vw;
   height: 100vh;
-  /* background-color: rgb(17, 0, 250); */
+  background-color: rgb(17, 0, 250);
 }
-
 .mobile.vertical .panel-wrap {
   width: 100vh;
   height: 100vw;
@@ -77,7 +80,7 @@ canvas {
 }
 .parent-panel-bg-main {
   position: relative;
-  /* background-color: violet; */
+  background-color: violet;
   height: 100%;
   width: 100%;
 } 
@@ -114,7 +117,7 @@ canvas {
     position: absolute;
   }
   .mobile.vertical .canvas {
-    margin-top: 29.25%;
+    /* margin-top: 29.25%; */
     height: 100vw;
     width: calc(100vw / 9 * 16);
   }
@@ -126,6 +129,7 @@ canvas {
     background-position: center;
     width: 100%;
     height: 100%;
+    cursor: pointer !important;
   } 
   
   .mobile .panel-bg-greeting {
@@ -140,6 +144,7 @@ canvas {
     top: 35%;
     left: 17%;
     z-index: 1;
+    cursor: pointer !important;
   }
 
   #img-hand {
@@ -149,6 +154,7 @@ canvas {
     left: 19%;
     z-index: 2;
     animation: handShowUp 4s;
+    cursor: pointer !important;
   }
 
   @keyframes handShowUp {
@@ -181,22 +187,23 @@ canvas {
     left: 22%;
     z-index: 0;
     animation: moveFromBottom 5s;
+    cursor: pointer !important;
   }
 
   @keyframes moveFromBottom {
     0% { 
-      margin-top: 30vh;
+      top: 13%;
       opacity: 0;
     }
     90% { 
-      margin-top: 30vh;
+      top: 10%;
       opacity: 0;
     }
     91% {
       opacity: 1;
     }
     100% {
-      margin-top: 6vh;
+      top: 6%;
       opacity: 1;
     }
   }
@@ -209,12 +216,12 @@ canvas {
     top: 41%;
     width: 20%;
     left: 22%;
-    z-index: 3;
+    z-index: 1;
   }
 
   .mobile.vertical #img-hand {
     position: absolute;
-    top: 41%;
+    top: 27%;
     width: 20%;
     left: 24%;
     z-index: 2;
@@ -224,55 +231,49 @@ canvas {
   @keyframes handShowUpMobile {
     0% { 
       opacity: 0;
-      top: 41%;
+      top: 39%;
     }
     84% { 
-      z-index: 4;
       opacity:0;  
     }
-    85% { 
-      top: 37%;
+    90% { 
       opacity: 1;
+      top: 39%;
       animation-timing-function: ease-in;
-      z-index: 4;
     } 
     95% {
-      top: 25%;
+      top: 32%;
       animation-timing-function: ease-in;
-      opacity: 1;
-      z-index: 4;
     }
     100% {
       top: 27%;
-      opacity: 1;
       animation-timing-function: ease-in;
-      z-index: 4;
     }
   }
 
   .mobile.vertical #img-garfield {
     position:absolute;
-    top: 41%;
+    top: 17%;
     width: 20%;
-    left: 24%;
+    left: 26%;
     z-index: 0; 
     animation: moveFromBottomMobile 5s;
   }
 
   @keyframes moveFromBottomMobile {
     0% { 
-      margin-top: 30vh;
+      top: 25%;
       opacity: 0;
     }
     90% { 
-      margin-top: 30vh;
+      top: 22%;
       opacity: 0;
     }
     91% {
       opacity: 1;
     }
     100% {
-      margin-top: 6vh;
+      top: 17%;
       opacity: 1;
     }
   }
